--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -41,6 +41,7 @@
     "eslint": "^8.9.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "react-router-dom": "^6.2.1"
   }
 }
